# qsortrank

./: README.md  configure.ac
src/: Makefile.am  qsortrank.c  qsortrank.h
